--- a/index.html
+++ b/index.html
@@ -107,13 +107,17 @@
       flex-direction: column;
       gap: 10px;
       align-items: center;
-      transition: transform 0.3s cubic-bezier(.68, -0.55, .27, 1.55);
+      transition: transform 0.3s cubic-bezier(.68, -0.55, .27, 1.55), opacity 0.3s;
       z-index: 10;
       transform: translateX(-180px);
+      opacity: 0;
+      pointer-events: none;
     }
 
     .sidebar.open {
       transform: translateX(0);
+      opacity: 1;
+      pointer-events: auto;
     }
 
     .sidebar-toggle {
