added pitbull gif

--- a/songs.html
+++ b/songs.html
@@ -105,14 +105,13 @@
                     </ul>
                 </div>
               
-                    <div class="top-right-gif">
-                        <div class="tenor-gif-embed" data-postid="6650166490883867733" data-share-method="host" data-aspect-ratio="1" data-width="100%">
-                        <a href="https://tenor.com/view/music-notes-music-gif-6650166490883867733">Music Notes Sticker</a>from <a href="https://tenor.com/search/music+notes-stickers">Music Notes Stickers</a>
-                        </div>
-                        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-                    </div>
-                    
+                <div class="top-left-gif flipped">
+                    <img src="Images/music-notes-music.gif" alt="Music Notes" style="width:100%;height:auto;">
+                </div>
+
+                <div class="top-right-gif">
+                    <img src="Images/pitbull.gif" alt="Decorative GIF" style="width:100%;height:auto;">
+                </div>
             </div>
-        </div>
-    </body>
+        </body>
 </html>
