moving css back to inline

--- a/songs.html
+++ b/songs.html
@@ -105,11 +105,22 @@
                     </ul>
                 </div>
               
-                <div class="top-left-gif flipped">
+                <div style="
+                position: absolute;
+                top: 10px;
+                left: 300px;
+                z-index: 1000;
+                width: 150px; 
+                transform: scaleX(-1);">
                     <img src="Images/music-notes-music.gif" alt="Music Notes" style="width:100%;height:auto;">
                 </div>
 
-                <div class="top-right-gif">
+                <div style="
+                position: absolute;
+                top: 10px;
+                right: 120px;
+                z-index: 1000;
+                width: 150px;">
                     <img src="Images/pitbull.gif" alt="Decorative GIF" style="width:100%;height:auto;">
                 </div>
             </div>
