--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <form id="search-form">
       <input id="city" type="text" placeholder="Search a city (e.g., Lisbon)" required />
       <button type="submit">Get Forecast</button>
+      <button type="button" id="quick-load-btn">⚡ Quick </button>
     </form>
 
     <section id="result" class="card hidden">
@@ -57,7 +58,8 @@
       <audio id="music"></audio>
 
       <!-- 5-day forecast -->
-      <div id="forecast" class="forecast"></div>
+      <div id="forecast" class="forecast">
+      </div>
 
       <!-- Map container -->
       <div id="map-container" class="map-container hidden">
@@ -65,8 +67,6 @@
         <div class="map-controls">
           <button id="zoom-in" class="map-btn">Zoom In</button>
           <button id="zoom-out" class="map-btn">Zoom Out</button>
-          <button id="toggle-streets" class="map-btn">Toggle Streets</button>
-          <button id="close-map" class="map-btn">Close Map</button>
         </div>
       </div>
     </section>
