--- a/songs.html
+++ b/songs.html
@@ -78,8 +78,9 @@
         </script>
         <!-- Main content -->
         <div style="flex: 1; display: flex; justify-content: center; align-items: center;">
-            <div style="max-width: 800px; width: 100%; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); min-height: 800px;">
-                
+            <div
+                style="max-width: 800px; width: 100%; background: #222; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); min-height: 800px;">
+
                 <!-- Centered Heading Above Slideshow -->
                 <div style="text-align: center; margin-bottom: 80px; margin-top: 50px;">
                     <h1 style="color: white; font-size: 2em;">Songs Used on this Website</h1>
@@ -91,8 +92,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull ft. TJR - Don't Stop The Party (Official Audio) - Pitbull (480p, h264, youtube).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull ft. TJR - Don't Stop The Party (Official Audio) - Pitbull (480p, h264, youtube).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull ft. TJR - Don't Stop The Party</div>
@@ -101,8 +104,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull - Rain Over Me ft. Marc Anthony - PitbullVEVO (720p, h264, youtube).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull - Rain Over Me ft. Marc Anthony - PitbullVEVO (720p, h264, youtube).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull - Rain Over Me ft. Marc Anthony</div>
@@ -111,8 +116,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull, Keha - Timber (featuring Keha - Official Video) - PitbullVEVO (720p, h264, youtube).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull, Keha - Timber (featuring Keha - Official Video) - PitbullVEVO (720p, h264, youtube).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull ft. Keha - Timber</div>
@@ -121,8 +128,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/PITBULL - I know you want me (calle ocho) [Official video HD] - DO IT YOURSELF (720p, h264, youtube).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/PITBULL - I know you want me (calle ocho) [Official video HD] - DO IT YOURSELF (720p, h264, youtube).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">PITBULL - I know you want me (calle ocho)</div>
@@ -131,8 +140,8 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Give Me Everything - Pitbull (480p, h264) (1).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source src="Videos/Give Me Everything - Pitbull (480p, h264) (1).mp4" type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull - Give Me Everything ft. Ne-Yo, Afrojack, Nayer</div>
@@ -141,8 +150,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull - Feel This Moment (Lyrics) ft. Christina Aguilera - 7clouds (480p, h264).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull - Feel This Moment (Lyrics) ft. Christina Aguilera - 7clouds (480p, h264).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull - Feel This Moment ft. Christina Aguilera</div>
@@ -151,8 +162,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull - Fireball (Lyrics) feat. John Ryan - Fusion Music (480p, h264).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull - Fireball (Lyrics) feat. John Ryan - Fusion Music (480p, h264).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull - Fireball ft. John Ryan</div>
@@ -161,8 +174,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull - International Love (Lyrics) ft. Chris Brown - Iyan Music (720p, h264).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull - International Love (Lyrics) ft. Chris Brown - Iyan Music (720p, h264).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull - International Love ft. Chris Brown</div>
@@ -171,8 +186,10 @@
                     <div class="mySlides fade">
                         <div class="video-wrapper">
                             <video controls>
-                            <source src="Videos/Pitbull, Ne-Yo - Time Of Our Lives (Lyrics) - Dan Music (480p, h264).mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                                <source
+                                    src="Videos/Pitbull, Ne-Yo - Time Of Our Lives (Lyrics) - Dan Music (480p, h264).mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="text">Pitbull, Ne-Yo - Time Of Our Lives</div>
@@ -213,31 +230,31 @@
         <script>
 
             function showSlides(n) {
-    let i;
-    let slides = document.getElementsByClassName("mySlides");
-    let dots = document.getElementsByClassName("dot");
+                let i;
+                let slides = document.getElementsByClassName("mySlides");
+                let dots = document.getElementsByClassName("dot");
 
-    // Pause and reset all videos before switching slides
-    for (i = 0; i < slides.length; i++) {
-        let video = slides[i].querySelector('video');
-        if (video) {
-            video.pause();
-            video.currentTime = 0;
-        }
-    }
+                // Pause and reset all videos before switching slides
+                for (i = 0; i < slides.length; i++) {
+                    let video = slides[i].querySelector('video');
+                    if (video) {
+                        video.pause();
+                        video.currentTime = 0;
+                    }
+                }
 
-    if (n > slides.length) { slideIndex = 1 }
-    if (n < 1) { slideIndex = slides.length }
+                if (n > slides.length) { slideIndex = 1 }
+                if (n < 1) { slideIndex = slides.length }
 
-    for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex - 1].style.display = "block";
-    dots[slideIndex - 1].className += " active";
-}
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex - 1].style.display = "block";
+                dots[slideIndex - 1].className += " active";
+            }
             let slideIndex = 1;
             showSlides(slideIndex);
 
